hw3_ws/log/build_2024-02-18_15-21-42/q3/stdout_stderr.log
running egg_info
writing ../../build/q3/q3.egg-info/PKG-INFO
writing dependency_links to ../../build/q3/q3.egg-info/dependency_links.txt
writing entry points to ../../build/q3/q3.egg-info/entry_points.txt
writing requirements to ../../build/q3/q3.egg-info/requires.txt
writing top-level names to ../../build/q3/q3.egg-info/top_level.txt
reading manifest file '../../build/q3/q3.egg-info/SOURCES.txt'
writing manifest file '../../build/q3/q3.egg-info/SOURCES.txt'
running build
running build_py
copying q3/node_link.py -> /home/vboxuser/hw3_ws/build/q3/build/lib/q3
running install
  File "/home/vboxuser/hw3_ws/install/q3/lib/python3.10/site-packages/q3/node_link.py", line 21
    new_msg = str(datetime.now() ) + " " + str(_counter) + "Message:" + str(_counter) + " from " + _node
    ^^^^^^^
SyntaxError: invalid syntax

running install_lib
copying /home/vboxuser/hw3_ws/build/q3/build/lib/q3/node_link.py -> /home/vboxuser/hw3_ws/install/q3/lib/python3.10/site-packages/q3
byte-compiling /home/vboxuser/hw3_ws/install/q3/lib/python3.10/site-packages/q3/node_link.py to node_link.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/vboxuser/hw3_ws/install/q3/lib/python3.10/site-packages/q3-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/q3/q3.egg-info to /home/vboxuser/hw3_ws/install/q3/lib/python3.10/site-packages/q3-0.0.0-py3.10.egg-info
running install_scripts
Installing node_link script to /home/vboxuser/hw3_ws/install/q3/lib/q3
writing list of installed files to '/home/vboxuser/hw3_ws/build/q3/install.log'
